--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "ecommerce server",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js"
   },
   "keywords": [],
   "author": "Carlos Requena",
