added slices for auth in register

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 NODE_ENV='development'
 PORT=5080
 MONGO_URI=mongodb+srv://carlosreq11:1101@mernapp.i4h6c5l.mongodb.net/MERNApp
+JWT_KEY= ec2025mern
