Add server handing for stripe payments

--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "ecommerce server",
-  "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "Carlos Requena",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "ecommerce server",
+    "type": "module",
+    "main": "server.js",
+    "proxy": "http://localhost:5080",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "server": "nodemon server.js"
+    },
+    "keywords": [],
+    "author": "Carlos Requena",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.0.1",
+        "stripe": "^16.6.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
