--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "ecommerce server",
     "type": "module",
     "main": "server.js",
-    "proxy": "http://localhost:5080",
+    "proxy": "<http://localhost:5080>",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
